--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="nofollow" />
 
     <link href="bootstrap-grid.css" type="text/css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Open+Sans&display=swap" rel="stylesheet">
     <link href="project.css" type="text/css" rel="stylesheet" />
 </head>
@@ -213,7 +213,7 @@
         </footer>
     </div><!-----------End of Page------------------------------------------------------------------------------------------------->
 
-    <script src="https://unpkg.com/swiper/js/swiper.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="http://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
         crossorigin="anonymous">
         </script>
